@@ -76,6 +76,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   csplit accepts a new option: --suppressed-matched, to elide the lines
   used to identify the split points.
 
+  shred accepts new parameters to the --remove option to give greater
+  control over that operation, which can greatly reduce sync overhead.
+
   shuf accepts a new option: --repetitions (-r), to allow repetitions
   of input items in the permuted output.
 
